--- a/advanced-kubernetes/configs/ingress.yaml
+++ b/advanced-kubernetes/configs/ingress.yaml
@@ -1,15 +1,25 @@
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata: 
-  name: frontend-ingress
+  name: echomap
 spec: 
   rules: 
-    - 
-      host: frontend.example.com
+    - host: foo.bar.com
       http: 
         paths: 
-          - 
+          - path: /foo
             backend: 
-              serviceName: front-end
+              serviceName: echoheaders-x
               servicePort: 80
-            path: /
+           
+    - host: bar.baz.com
+      http: 
+        paths: 
+          - path: /bar
+            backend: 
+              serviceName: echoheaders-y
+              servicePort: 80
+          - path: /foo
+            backend: 
+              serviceName: echoheaders-x
+              servicePort: 80
