--- a/advanced-kubernetes/configs/ingress-config-template-configmap.yaml
+++ b/advanced-kubernetes/configs/ingress-config-template-configmap.yaml
@@ -338,7 +338,7 @@ data:
     }
 
     stream {
-    # TCP services
+    TCP services
     {{ range $i, $tcpServer := .tcpUpstreams }}
         upstream tcp-{{ $tcpServer.Upstream.Name }} {
             {{ range $server := $tcpServer.Upstream.Backends }}server {{ $server.Address }}:{{ $server.Port }};
@@ -353,7 +353,7 @@ data:
         }
     {{ end }}
 
-    # UDP services
+    UDP services
     {{ range $i, $udpServer := .udpUpstreams }}
         upstream udp-{{ $udpServer.Upstream.Name }} {
             {{ range $server := $udpServer.Upstream.Backends }}server {{ $server.Address }}:{{ $server.Port }};
