--- a/advanced-kubernetes/configs/ingress-daemonset.yaml
+++ b/advanced-kubernetes/configs/ingress-daemonset.yaml
@@ -1,59 +1,46 @@
 apiVersion: extensions/v1beta1
 kind: DaemonSet
 metadata:
-  name: ingress-controller
+  name: nginx-ingress-lb
   labels:
-    k8s-app: ingress-controller
-    component: core
+    name: nginx-ingress-lb
   namespace: kube-system
 spec:
   template:
     metadata:
       labels:
-        k8s-app: ingress-controller
-        component: core
+        name: nginx-ingress-lb
     spec:
       terminationGracePeriodSeconds: 60
       containers:
-      - image: gcr.io/google_containers/nginx-ingress-controller:0.8.3
-        name: ingress-controller-core
-        imagePullPolicy: Always
+      - image: gcr.io/google_containers/nginx-ingress-controller:0.9.0-beta.2
+        name: nginx-ingress-lb
+        readinessProbe:
+          httpGet:
+            path: /healthz
+            port: 10254
+            scheme: HTTP
         livenessProbe:
           httpGet:
             path: /healthz
             port: 10254
             scheme: HTTP
-          initialDelaySeconds: 30
-          timeoutSeconds: 5
-        # use downward API
-        env:
-        - name: POD_NAME
-          valueFrom:
-            fieldRef:
-              fieldPath: metadata.name
-        - name: POD_NAMESPACE
-          valueFrom:
-            fieldRef:
-              fieldPath: metadata.namespace
+          initialDelaySeconds: 10
+          timeoutSeconds: 1
         ports:
         - containerPort: 80
           hostPort: 80
         - containerPort: 443
           hostPort: 443
+        env:
+          - name: POD_NAME
+            valueFrom:
+              fieldRef:
+                fieldPath: metadata.name
+          - name: POD_NAMESPACE
+            valueFrom:
+              fieldRef:
+                fieldPath: metadata.namespace
         args:
         - /nginx-ingress-controller
         - --default-backend-service=$(POD_NAMESPACE)/default-http-backend
-        - --nginx-configmap=$(POD_NAMESPACE)/ingress-controller-config-template
-        - --udp-services-configmap=$(POD_NAMESPACE)/udp-configmap-example
-        - --v=3
-        volumeMounts:
-          - mountPath: /etc/nginx/template
-            name: config-template
-            readOnly: true
-      volumes:
-        - name: config-template
-          configMap:
-            name: ingress-controller-config-template
-            items:
-            - key: nginx.tmpl
-              path: nginx.tmpl
