--- a/kubernetes-essentials/configs/pod.yaml
+++ b/kubernetes-essentials/configs/pod.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: k8s-hello-world
+  name: hello-node
   labels:
-    app: k8s-hello-world
+    app: hello-node
 spec:
   containers:
-    - name: k8s-hello-world
-      image: muellermich/nodejs-hello
+    - name: hello-node
+      image: hello-node:v1
       ports:
         - containerPort: 8080
