--- a/advanced-kubernetes/configs/ingress-daemonset.yaml
+++ b/advanced-kubernetes/configs/ingress-daemonset.yaml
@@ -2,8 +2,6 @@ apiVersion: extensions/v1beta1
 kind: DaemonSet
 metadata:
   name: nginx-ingress-lb
-  labels:
-    name: nginx-ingress-lb
   namespace: kube-system
 spec:
   template:
@@ -13,25 +11,22 @@ spec:
     spec:
       terminationGracePeriodSeconds: 60
       containers:
-      - image: gcr.io/google_containers/nginx-ingress-controller:0.9.0-beta.2
+      - image: gcr.io/google_containers/nginx-ingress-controller:0.9
         name: nginx-ingress-lb
+        imagePullPolicy: Always
         readinessProbe:
           httpGet:
-            path: /healthz
-            port: 10254
+            path: /ingress-controller-healthz
+            port: 80
             scheme: HTTP
         livenessProbe:
           httpGet:
-            path: /healthz
-            port: 10254
+            path: /ingress-controller-healthz
+            port: 80
             scheme: HTTP
           initialDelaySeconds: 10
           timeoutSeconds: 1
-        ports:
-        - containerPort: 80
-          hostPort: 80
-        - containerPort: 443
-          hostPort: 443
+        # use downward API
         env:
           - name: POD_NAME
             valueFrom:
@@ -41,6 +36,11 @@ spec:
             valueFrom:
               fieldRef:
                 fieldPath: metadata.namespace
+        ports:
+        - containerPort: 80
+          hostPort: 80
+        - containerPort: 443
+          hostPort: 443
         args:
         - /nginx-ingress-controller
         - --default-backend-service=$(POD_NAMESPACE)/default-http-backend
