--- a/advanced-kubernetes/configs/ingress/ingress-auth.yaml
+++ b/advanced-kubernetes/configs/ingress/ingress-auth.yaml
@@ -1,18 +1,15 @@
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
-  name: foo-ssl
-  namespace: default
+  annotations:
+    ingress.kubernetes.io/auth-url: "https://httpbin.org/basic-auth/user/passwd"
+  name: external-auth
 spec:
-  tls:
-  - hosts:
-    - foo.bar.com
-    secretName: foo-secret
   rules:
-  - host: foo.bar.com
+  - host: external-auth-01.sample.com
     http:
       paths:
       - backend:
           serviceName: echoheaders-x
           servicePort: 80
-        path: /ssl
+        path: /
