--- a/advanced-kubernetes/configs/ingress/ingress-daemonset-tcp.yaml
+++ b/advanced-kubernetes/configs/ingress/ingress-daemonset-tcp.yaml
@@ -2,31 +2,39 @@ apiVersion: extensions/v1beta1
 kind: DaemonSet
 metadata:
   name: nginx-ingress-lb
+  labels:
+    name: nginx-ingress-lb
   namespace: kube-system
 spec:
   template:
     metadata:
       labels:
         name: nginx-ingress-lb
+      annotations:
+        prometheus.io/port: '10254'
+        prometheus.io/scrape: 'true'
     spec:
       terminationGracePeriodSeconds: 60
       containers:
-      - image: gcr.io/google_containers/nginx-ingress-controller:0.9
+      - image: gcr.io/google_containers/nginx-ingress-controller:0.9.0-beta.7
         name: nginx-ingress-lb
-        imagePullPolicy: Always
         readinessProbe:
           httpGet:
-            path: /ingress-controller-healthz
-            port: 80
+            path: /healthz
+            port: 10254
             scheme: HTTP
         livenessProbe:
           httpGet:
-            path: /ingress-controller-healthz
-            port: 80
+            path: /healthz
+            port: 10254
             scheme: HTTP
           initialDelaySeconds: 10
           timeoutSeconds: 1
-        # use downward API
+        ports:
+        - containerPort: 80
+          hostPort: 80
+        - containerPort: 443
+          hostPort: 443
         env:
           - name: POD_NAME
             valueFrom:
@@ -36,11 +44,7 @@ spec:
             valueFrom:
               fieldRef:
                 fieldPath: metadata.namespace
-        ports:
-        - containerPort: 80
-          hostPort: 80
-        - containerPort: 443
-          hostPort: 443
         args:
         - /nginx-ingress-controller
         - --default-backend-service=$(POD_NAMESPACE)/default-http-backend
+        - --tcp-services-configmap=$(POD_NAMESPACE)/nginx-tcp-ingress-configmap
