--- a/kubernetes-essentials/configs/deployment-v2.yaml
+++ b/kubernetes-essentials/configs/deployment-v2.yaml
@@ -13,6 +13,6 @@ spec:
     spec:
       containers:
       - name: hello-node
-        image: hello-node:v1
+        image: muellermich/hello-node:v1
         ports:
         - containerPort: 8080
