--- a/kubernetes-essentials/configs/pod.yaml
+++ b/kubernetes-essentials/configs/pod.yaml
@@ -7,6 +7,6 @@ metadata:
 spec:
   containers:
     - name: hello-node
-      image: hello-node:v1
+      image: muellermich/hello-node:v1
       ports:
         - containerPort: 8080
