--- a/kubernetes-deployment/configs/deployment-v2.yaml
+++ b/kubernetes-deployment/configs/deployment-v2.yaml
@@ -1,14 +1,14 @@
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  name: hello-node
+  name: hello-node2
 spec:
   replicas: 1
   template:
     metadata:
       labels:
         app: hello-node
-        version: 2
+        version: two
     spec:
       containers:
       - name: hello-node
